# aeron-php

./: .gitmodules  CMakeLists.txt  CREDITS  README.md  aeron.c  aeron.stub.php  aeron_arginfo.h  aeron_stub.php  build.sh  config.m4  config.w32  php_aeron.h
.github/workflows/: build.yml  main.yml
examples/: README.md  basic_publisher.php  basic_subscriber.php  composer.json
samples/: basic_publisher.php  basic_subscriber.php
tests/: 001.phpt
